Corrected service_name to site_name in more places to avoid colisions with oauth template tag of same name

--- a/molly/apps/desktop/templates/desktop/index.html
+++ b/molly/apps/desktop/templates/desktop/index.html
@@ -1,7 +1,7 @@
 {% load compressed %}<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
 <head>
-<title>{{ service_name }}</title>
+<title>{{ site_name }}</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <link rel="stylesheet" href="{{ STATIC_URL }}blueprint/screen.css"
 	type="text/css" media="screen,projection" />
@@ -224,7 +224,7 @@ img.shadow {
 <div class="span-44 background">
 <div class="span-36 prepend-top">
 <h1><img class="logo" src="{{ STATIC_URL }}desktop/images/logo.png"
-	alt="{{ service_name }}" /></h1>
+	alt="{{ site_name }}" /></h1>
 
 <p class="strap-line">Your university
 and city on the move</p>
@@ -244,14 +244,14 @@ and city on the move</p>
 <h2>A wealth of
 information from across the University and City of Oxford.</h2>
 
-<p style="margin-bottom: 4px;">Whoever you are, {{ service_name }}
+<p style="margin-bottom: 4px;">Whoever you are, {{ site_name }}
 is your central guide to help you do your day-to-day tasks. Whether
 it's <a href="#library">finding a library book</a>, <a href="#bus">checking
 the next bus</a> or even finding <a href="#places">what time
-the nearest post box is collected</a> {{ service_name }} is for you.</p>
+the nearest post box is collected</a> {{ site_name }} is for you.</p>
 
 <div class="accessing" style="font-size:1.2em; margin-bottom: 4px;">
-<p><a href="#features">Discover {{ service_name }}'s features</a></p>
+<p><a href="#features">Discover {{ site_name }}'s features</a></p>
 </div>
 
 <h2>You don't need a fancy phone</h2>
@@ -283,7 +283,7 @@ a 2D barcode below
 
 <div class="span-24 append-1 last align-center"><img
     src="{{ STATIC_URL }}desktop/images/phones.png" height="500" width="450"
-    alt="Various phones showing {{ service_name }}" />
+    alt="Various phones showing {{ site_name }}" />
     </div>
 
 <div class="prepend-1 span-40 append-1 last prepend-top">
@@ -536,8 +536,8 @@ Learn how to use Eduroam</a></p>
     
     <div class="span-25 prepend-1 append-2 last prepend-top">
     <small>
-    <p>We use a technology called "<a href="http://oauth.net/" title="oAuth.net link">oAuth</a>" to let you access very limited parts of WebLearn through {{ service_name }} without having to re-enter your password every time. 
-    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your WebLearn account you may stop it by using the instructions on {{ service_name }} or in <a href="http://weblearn.ox.ac.uk/">WebLearn</a> follow the "My workspace"->"Trusted applications" to remove {{ service_name }}.</p>
+    <p>We use a technology called "<a href="http://oauth.net/" title="oAuth.net link">oAuth</a>" to let you access very limited parts of WebLearn through {{ site_name }} without having to re-enter your password every time. 
+    To do this, follow the instructions on screen when you first click on the "Sign-Ups" tool (as seen in these screenshots). If at anytime you want to stop your phone having access to your WebLearn account you may stop it by using the instructions on {{ site_name }} or in <a href="http://weblearn.ox.ac.uk/">WebLearn</a> follow the "My workspace"->"Trusted applications" to remove {{ site_name }}.</p>
     </small>
     </div>  
     
@@ -554,7 +554,7 @@ Learn how to use Eduroam</a></p>
     
     <div class="span-10">
         <img class="shadow" src="{{ STATIC_URL }}desktop/images/features/weblearn-3.png" />
-        <p>3. WebLearn then asks you to confirm that you want to be able to access WebLearn through {{ service_name }}.</p> 
+        <p>3. WebLearn then asks you to confirm that you want to be able to access WebLearn through {{ site_name }}.</p> 
     </div>
     
     <div class="span-10 append-1 last">
@@ -597,9 +597,9 @@ Learn how to use Eduroam</a></p>
     <div class="span-13">
     <h3>Search</h3>
     
-    <p>You will find effective search boxes on all the key pages across {{ service_name }}, but they are a little smarter than you might think!</p>
+    <p>You will find effective search boxes on all the key pages across {{ site_name }}, but they are a little smarter than you might think!</p>
     <h4>Front page 'Universal Search'</h4>
-    <p>You will find this search box which searches all of {{ service_name }} on the front page.</p>
+    <p>You will find this search box which searches all of {{ site_name }} on the front page.</p>
     <h4>'App specific' searches</h4>
     <p>On each app (e.g. "Podcasts" or "Places") you will find another search box. These search boxes will only search the contents of that specific app i.e. if you search for "History of Art" inside the "Podcasts" app, it will only show you podcasts related to the search.</p>
     </div>
@@ -622,7 +622,7 @@ Learn how to use Eduroam</a></p>
         <dd> Oxontime numbers (as on all bus stops in Oxfordshire) e.g. "69328969", a city centre bus stop number e.g. "E3", or an ATCO code e.g. "69328969".
         </dd>
         <dt>ISBN/ISSN Numbers</dt>
-        <dd>Type in an ISBN/ISSN number and {{ service_name }} will run a Library Search for you.</dd>
+        <dd>Type in an ISBN/ISSN number and {{ site_name }} will run a Library Search for you.</dd>
         <dt>Postcodes</dt>
         <dd>Type in a post code and you can use it as a starting point for finding things near by in the "Places" app.</dd>
         
@@ -703,7 +703,7 @@ Learn how to use Eduroam</a></p>
 <div id="footer">
 <div class="container">
 <div class="span-32">
-<p>&copy; 2010 <a href="http://www.oucs.ox.ac.uk/">Oxford University Computing Services</a> <br />{{ service_name }} is a core-funded service and <a href="http://mollyproject.org/">open source software</a> originally developed by OUCS under the <a href="http://jisc.ac.uk/">JISC</a>-funded Erewhon Project.<br />
+<p>&copy; 2010 <a href="http://www.oucs.ox.ac.uk/">Oxford University Computing Services</a> <br />{{ site_name }} is a core-funded service and <a href="http://mollyproject.org/">open source software</a> originally developed by OUCS under the <a href="http://jisc.ac.uk/">JISC</a>-funded Erewhon Project.<br />
 We use <a href="http://mollyproject.org/">The Molly Project</a>: an open souce community project. Get involved or deploy at your institution by visiting <a href="http://mollyproject.org/">http://mollyproject.org/</a>.</p>
 </div>
 <div class="span-12 last">
@@ -738,7 +738,7 @@ We use <a href="http://mollyproject.org/">The Molly Project</a>: an open souce c
 </div>
 <div class="span-14 last">
 <h2>Contact or help out</h2>
-<p>There are many ways you can get involved with {{ service_name }}.</p>
+<p>There are many ways you can get involved with {{ site_name }}.</p>
 <dl>
     <dt>Email feedback etc: </dt>
     <dd><a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a></dd>
