--- a/molly/maps/templates/maps/osm/about.html
+++ b/molly/maps/templates/maps/osm/about.html
@@ -8,11 +8,11 @@
   </p>
 
   <p>
-    {{ service_name }} uses OSM data under the Creative Commons Attribution-Share Alike (CC-BY-SA) 2.0 license to provide maps and points-of-interest data.
+    {{ site_name }} uses OSM data under the Creative Commons Attribution-Share Alike (CC-BY-SA) 2.0 license to provide maps and points-of-interest data.
   </p>
 
   <p>
-    Should you wish to contribute to OSM, you can either submit corrections though {{ service_name }} (there's a Suggest a correction link at the bottom of each OSM-derived page), or set up an OSM account and edit directly. For more information on getting started, see the Beginners' Guide (link below) on the OpenStreetMap website.
+    Should you wish to contribute to OSM, you can either submit corrections though {{ site_name }} (there's a Suggest a correction link at the bottom of each OSM-derived page), or set up an OSM account and edit directly. For more information on getting started, see the Beginners' Guide (link below) on the OpenStreetMap website.
   </p>
 
   <p>
