--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -2,7 +2,7 @@
     <h2>About this site</h2>
 
     <div class="note"><div class="bubble pad-10">
-    {{ service_name }} was produced as part of the
+    {{ site_name }} was produced as part of the
     <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
     <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
     provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
@@ -38,5 +38,5 @@
 	<h2>Be aware</h2>
 	<div class="note"><div class="bubble pad-10">
 		<p>
-			Using {{ service_name }} may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
+			Using {{ site_name }} may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
 </div></div></div>
