--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -13,20 +13,20 @@
   
   <div class="article"><div class="bubble pad-5">
     <p>
-      Thank you for wanting to improve the data provided by {{ service_name }}.
+      Thank you for wanting to improve the data provided by {{ site_name }}.
       However, before you submit any changes, you should be aware of the
       following terms.
     </p>
     
     <p style="margin-top:0.5em;">
       Your contribution will be released into the Public Domain, and then
-      submitted to OpenStreetMap by {{ service_name }}.
+      submitted to OpenStreetMap by {{ site_name }}.
     </p>
     
     <p style="margin-top:0.5em;">
-      Your changes will be checked by a member of the {{ service_name }} team
-      before being uploaded. {{ service_name }} may tidy or normalise the data you
-      provide before they are uploaded using the {{ service_name }} OSM account.
+      Your changes will be checked by a member of the {{ site_name }} team
+      before being uploaded. {{ site_name }} may tidy or normalise the data you
+      provide before they are uploaded using the {{ site_name }} OSM account.
     </p>
     
     <p style="margin-top:0.5em;">
