--- a/demos/molly_oxford/templates/sakai/signup/list.html
+++ b/demos/molly_oxford/templates/sakai/signup/list.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load molly_utils %}
+{% extends "sakai/base.html" %}{% load molly_utils %}{% load oxford_term_dates %}
 
 {% block pagetitle %}Meetings{% endblock %}
 
@@ -15,12 +15,14 @@
 <table class="content">
 {% for event in events %}
 
-{% ifchanged event.start|date:"WY" %}
+{% ifchanged event.start|oxdate:"%(week)s%(ordinal)s%(term_long)s" %}
 <tr class="sub-section-divider"><th colspan='3'>
-Week {{ event.start|date:"W" }}, {{ event.start|date:"Y" }}
+{{ event.start|oxdate:"%(week)s%(ordinal)s Week %(term_long)s Term" }}
 </th></tr>
-{% endifchanged %}
+<tr> <td class="center tutorial-date ">
+{% else %}
 <tr><td class="center tutorial-date">
+{% endifchanged %}
     {% ifequal event.start|date:"dMY" event.end|date:"dMY" %}
       {# 1. If start and end time are on the same day #}
 
