--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -8,9 +8,7 @@
 {% block content %}
 
 <div class="section">
-<div class="header">
-	<h2>Oxfordshire <small>- RAF Benson at {{ observation.observed_date|date:"H:i" }}</small></h2>
-</div>
+{% block weatherloc %}{% endblock %}
 	<div class="note">
 		<div class="weather-icon">
 	    <img src="{{ STATIC_URL }}weather/images/{{ observation.icon }}.png" alt="{{ observation.get_outlook_display|capfirst }}"/><br/>
