Tweak to CSS on podcast list and sundry de-localising for podcast listings

--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -30,7 +30,7 @@
         <br />
         <span style="font-size:80%; padding-left:0;">{{ podcast.description|truncatewords:10 }}</span>
         </div>
-        <span style="clear:both;"> </span>
+        <br style="clear:both;"/>
       </a>
     </li>
 {% endfor %}
