--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -10,7 +10,7 @@
 <div class="section">
 {% block weatherloc %}
 <div class="header">
-	<h2>{{ weather.name }} <small>at {{ observation.observed_date|date:"H:i" }}</small></h2>
+	<h2>{{ observation.name }} <small>at {{ observation.observed_date|date:"H:i" }}</small></h2>
 </div>
 {% endblock %}
 	<div class="note">
