--- a/molly/apps/contact/templates/contact/result.html
+++ b/molly/apps/contact/templates/contact/result.html
@@ -2,30 +2,30 @@
 
 {% load molly_utils %}
 
-<h3 class="contact-cn">{% if person.id %}
+{% if person.id %}
     <a href="{% url contact:result_detail person.id %}">{{ person.cn }}</a>
   {% else %}
     {{ person.cn }}
-{% endif %}</h3>
+{% endif %}
 
 <div class="contact-details">
   {% for title in person.title %}
-    <p class="contact-title">
+    <p>
       {{ title }}
     </p>
   {% endfor %}
   {% for ou in person.ou %}
-    <p class="contact-ou">
+    <p>
       {{ ou }}
     </p>
   {% endfor %}
   {% for mail in person.mail %}
-    <p class="contact-mail">
+    <p>
       <a class="email" href="mailto:{{ mail }}">{{ mail }}</a>
     </p>
   {% endfor %}
   {% for telephoneNumber in person.telephoneNumber %}
-    <p class="contact-telephoneNumber">
+    <p>
       <a class="phone" href="{{ telephoneNumber|telephone_uri }}">{{ telephoneNumber }}</a>
     </p>
   {% endfor %}
