--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -2,35 +2,7 @@
     <h2>About this site</h2>
 
     <div class="note"><div class="bubble pad-10">
-    {{ site_name }} was produced as part of the
-    <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
-    <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
-    provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
-    mobile devices.
-    </div></div>
-</div>
-
-<div class="section">
-    <h2>Credits</h2>
-    <div class="note"><div class="bubble pad-10">
-        <p>
-        The Erewhon team would like to thank the following organisations
-        for providing the data used in the Portal:
-        </p>
-        
-        <dl>
-			<dt>Dailyinfo</dt>
-			<dt>Association of Train Operating Companies</dt>
-            <dt>Oxontime</dt>
-			<dt>Oxfordshire County Council</dt>
-			<dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
-			<dt>BBC</dt>
-            <dt>Edina</dt>
-            <dt>OpenStreetMap and Contributors</dt>
-            <dt>Oxford University Estates Department</dt>
-            <dt>Oxford University Library Services</dt>
-			<dt>Cloudmade</dt>
-        </dl>
+    This is a Molly Project Demo site. 
     </div></div>
 </div>
 
@@ -38,5 +10,5 @@
 	<h2>Be aware</h2>
 	<div class="note"><div class="bubble pad-10">
 		<p>
-			Using {{ site_name }} may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
+			Using this site may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
 </div></div></div>
