--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -93,12 +93,14 @@
     {% endif %}
 
     <ul class="stand-alone link-list round-top">
+	{% if "feature_vote"|app_is_loaded %}
             <li class="round-top"><a href="{% url feature_vote:index %}">Suggest a feature</a></li>
-			<li><a href="{% url home:static_about %}">About this site</a></li>
-			{% if has_user_messages %}
+	{% endif %}
+	<li><a href="{% url home:static_about %}">About this site</a></li>
+	{% if has_user_messages %}
             <li><a href="{% url home:messages %}">Read messages from the developers</a></li>
-			{% endif %}
-            <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">Provide feedback</a></li>
+	{% endif %}
+        <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">Provide feedback</a></li>
     </ul>
 
 	{% block below-about %} {% endblock %} 
