--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -102,10 +102,13 @@
     <a style="margin:0 10px 0 2px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url url_shortener:index %}?path={{ full_path|urlencode }}">2D barcode and shortened link</a>
   </div>
+  
+{% if "feature_vote"|app_is_loaded %}
   <div style="width:100%; float:left; margin-top: 2px; margin-bottom:10px;">
     <a style="margin:0 10px 0 10px; background-color:white; padding:10px; -webkit-border-radius:6px; -moz-border-radius:6px; text-align:center; display:block"
        href="{% url feature_vote:index %}">Have an idea? Suggest a feature!</a>
   </div>
+{% endif %}
   <div style="clear:both"> </div>
 
 {% endblock %}
