--- a/molly/apps/feeds/templates/feeds/events/item_list.html
+++ b/molly/apps/feeds/templates/feeds/events/item_list.html
@@ -10,7 +10,9 @@
 </div>
     {% endif %}
 <div class="section">
-  <h2>{{ item.dt_start|date:"l, jS F Y" }}</h2>
+  <div class="header">
+    <h2>{{ item.dt_start|date:"l, jS F Y" }}</h2>
+  </div>
   <ul class="link-list">
   {% endifchanged %}
   <li {% if forloop.last %}class="round-bottom"{% endif %}>
