--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -8,11 +8,9 @@
 {% block content %}
 
 <div class="section">
-{% block weatherloc %}
-<div class="header">
-	<h2>{{ observation.name }} <small>at {{ observation.observed_date|date:"H:i" }}</small></h2>
-</div>
-{% endblock %}
+    <div class="header">
+        <h2>{% block location %}{{ observation.name }}{% endblock %} <small>at {{ observation.observed_date|date:"H:i" }}</small></h2>
+    </div>
 	<div class="note">
 		<div class="weather-icon">
 	    <img src="{{ STATIC_URL }}weather/images/{{ observation.icon }}.png" alt="{{ observation.get_outlook_display|capfirst }}"/><br/>
