--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -50,6 +50,7 @@
       </ol> 
       <div id="bc-title">
         <h1 class="{% if not breadcrumbs.2 %}{{ breadcrumbs.0 }}-header with-icon{% endif %}">{{ breadcrumbs.4 }}</h1>
+        {% include "favourite.html" %}
       </div>
     </div>
 {% else %}
@@ -63,6 +64,7 @@
          <div id="bc-title">
            <h1>{{ breadcrumbs.4 }}</h1>
          </div>
+         {% include "favourite.html" %}
        </div>
 {% endifnotequal %}
 
