--- a/molly/apps/places/templates/places/nearby_list.html
+++ b/molly/apps/places/templates/places/nearby_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-{% for name, types in entity_types %}
+{% for name, types in entity_types.items %}
 <div class="section">
 <div class="header">
   <h2>{{ name }}</h2>
