Change text to "calling at" - makes more sense if this service terminates at this station

--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -23,7 +23,7 @@
   <ul class="content-list no-round-bottom">
     <li>Operated by {{ train_service.ldb.operator }}</li>
     {% if train_service.ldb.platform %}
-      <li>Departing from platform {{ train_service.ldb.platform }}</li>
+      <li>Calling at platform {{ train_service.ldb.platform }}</li>
     {% endif %}
     {% if train_service.ldb.disruptionReason %}
       <li>{{ train_service.ldb.disruptionReason|sanitize_html }}</li>
