--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -18,7 +18,7 @@
 </div>
 {% endifequal %}
 
-<div class="section">
+<div class="section" id="poi-category-selector">
 <div class="header">
     {% if not entity.metadata.real_time_information %}
       <h2>Map</h2>
@@ -36,8 +36,8 @@
 	
 	{% render_location_map entity.location %}
  </div>
-	<ul class="link-list">
-	    <li class="round-bottom"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
+	<ul class="link-list category-list">
+	    <li class="round-bottom nearby"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
 	</ul>
 	{% else %}
 	    <div class="note"><div class="bubble">
