--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -31,14 +31,14 @@
 
 
 {# Points of Interest #}
-<div class="section">
+<div class="section" id="poi-category-selector">
 <div class="header">
   <h2>Points of Interest</h2>
   {% include "geolocation/update_location_embed.html" %}
 </div>
-  <ul class="link-list">
-    <li><a href="{% url places:nearby-list %}">Nearby</a></li>
-    <li class="round-bottom"><a href="{% url places:category-list %}">By Category</a></li>
+  <ul class="link-list category-list">
+    <li class="nearby"><a href="{% url places:nearby-list %}">Nearby</a></li>
+    <li class="categories"><a href="{% url places:category-list %}">By Category</a></li>
   </ul>
 </div>
 {# End Points of Interest #}
