Fix showing a bearing

--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -83,7 +83,7 @@
     <tbody>
 
 {% for entity in data.entities %}
-	<tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% ifnotequal bus_stops.results_type "Favourite" %} <small>({{ entity.distance.m|round_up_10 }} m{{ entity.bearing }})</small>{% endifnotequal %}</a></th></tr>
+	<tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% if entity.distance %} <small>({{ entity.distance.m|round_up_10 }}m {{ entity.bearing }})</small>{% endif %}</a></th></tr>
 	{% if entity.metadata.real_time_information.pip_info %}
 	  <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
 	{% endif %}
