Use telephone number formatter in search results

--- a/molly/apps/contact/templates/contact/result.html
+++ b/molly/apps/contact/templates/contact/result.html
@@ -26,7 +26,7 @@
   {% endfor %}
   {% for telephoneNumber in person.telephoneNumber %}
     <p>
-      <a class="phone" href="{{ telephoneNumber|telephone_uri }}">{{ telephoneNumber }}</a>
+      {{ telephoneNumber|telephone }}}</a>
     </p>
   {% endfor %}
 </div>
